src/App.css
:root {
  --primary-colour: #f570ff;
  --secondary-colour: #a300ff;
  --tertiary-colour: #650062;
  --title-font: "Tulpen One", sans-serif;
  --main-font: "Saira Extra Condensed", sans-serif;
  --secondary-font: "Open Sans", sans-serif;
  --tertiary-font: Verdana, Geneva, Tahoma, sans-serif;
}

*,
*::before,
*::after {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

.main-container {
  position: fixed;
  height: 100%;
  width: 100%;
  background: url("images/background-blurred.jpg");
  background-size: cover;
  position: relative;
  text-transform: uppercase;
  overflow-x: hidden;
}

/* Header */

.nav-bar {
  height: 10%;
  width: 100%;
  background-color: var(--primary-colour);
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: 0 10px;
  position: fixed;
  z-index: 9999;
}

.main-title {
  font-family: var(--title-font);
  font-weight: 400;
  color: white;
  text-align: center;
  font-size: 6vh;
}

.shopping-basket-btn-container {
  --shopping-basket-btn-size: 8vh;
  position: fixed;
  height: var(--shopping-basket-btn-size);
  width: var(--shopping-basket-btn-size);
  right: 0.5rem;
}

.shopping-basket-btn {
  border: none;
  background-color: transparent;
}

.cake-icon {
  height: var(--shopping-basket-btn-size);
}

.shopping-basket-notification {
  height: calc(var(--shopping-basket-btn-size) / 2);
  width: calc(var(--shopping-basket-btn-size) / 2);
  border-radius: 50%;
  background-color: var(--secondary-colour);
  font-family: var(--secondary-font);
  text-align: center;
  font-size: calc(var(--shopping-basket-btn-size) / 3);
  line-height: calc(var(--shopping-basket-btn-size) / 2);
  color: white;
  position: absolute;
  bottom: calc(var(--shopping-basket-btn-size) * 0.05);
  left: calc(var(--shopping-basket-btn-size) / 2);
}

/* Item Card */

.item-container {
  margin-top: 10vh;
  height: 90vh;
  width: 100%;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: center;
  position: relative;
  overflow-y: scroll;
}

.item-card {
  width: 300px;
  height: 190px;
  background-color: white;
  font-family: var(--main-font);
  padding: 10px;
  border: 1px solid var(--primary-colour);
  border-radius: 15px;
  margin: 10px 0;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  font-size: 16px;
}

.item-heading {
  font-weight: 400;
  display: flex;
  justify-content: space-between;
  padding-bottom: 10px;
}

.item-info {
  display: flex;
  align-items: flex-start;
}

.item-photo {
  height: 120px;
  width: 150px;
  overflow: hidden;
  display: flex;
  justify-content: center;
  border: 1px solid #707070;
}

.item-photo img {
  height: 120px;
}

.item-details {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
  width: 50%;
  height: 100%;
}

.item-description {
  line-height: 100%;
  text-align: center;
  margin-left: 5px;
  font-size: 15px;
  margin-bottom: 5px;
}

.add-to-basket-btn {
  background-color: var(--secondary-colour);
  color: white;
  width: 100px;
  height: 30px;
  text-align: center;
  border-radius: 5px;
  font-size: 16px;
  line-height: 30px;
}

.item-quantity-btns {
  width: 100px;
  height: 30px;
  border: 1px solid var(--secondary-colour);
  box-sizing: content-box;
  display: flex;
  border-radius: 5%;
}

.item-qty-btn {
  width: 35%;
  height: 100%;
  border: none;
  font-size: 24px;
  background-color: var(--secondary-colour);
  color: white;
}

.item-qty-text {
  width: 30%;
  height: 100%;
  text-align: center;
  font-size: 18px;
  line-height: 30px;
}

/* Shopping Basket */

.shopping-basket-background {
  height: 100%;
  width: 100%;
  z-index: 1;
  background-color: black;
  background-color: rgba(0, 0, 0, 0.8);
  bottom: 0;
  right: 0;
  display: none;
  position: fixed;
  overflow-y: hidden;
}

.show-shopping-basket-background {
  display: block;
  animation: fade-in 0.5s linear;
}

@keyframes fade-in {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}

.shopping-basket {
  --shopping-basket-height: 90%;
  --shopping-basket-width: 100%;
  height: var(--shopping-basket-height);
  width: var(--shopping-basket-width);
  z-index: 2;
  background-color: white;
  position: fixed;
  right: 0;
  top: 0;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-between;
  font-family: var(--main-font);
  transform: translateY(-100%);
  -webkit-transform: translateY(-100%);
  -moz-transform: translateY(-100%);
  -ms-transform: translateY(-100%);
  -o-transform: translateY(-100%);
  transition: transform 0.5s linear;
  -webkit-transition: transform 0.5s linear;
  -moz-transition: transform 0.5s linear;
  -ms-transition: transform 0.5s linear;
  -o-transition: transform 0.5s linear;
}

.show-shopping-basket {
  --shopping-basket-offset: calc(((1 / 9) * 100) * 1%);
  transform: translateY(var(--shopping-basket-offset));
  -webkit-transform: translateY(var(--shopping-basket-offset));
  -moz-transform: translateY(var(--shopping-basket-offset));
  -ms-transform: translateY(var(--shopping-basket-offset));
  -o-transform: translateY(var(--shopping-basket-offset));
}

.shopping-basket h1 {
  font-weight: 400;
  font-size: 32px;
  text-align: center;
  color: var(--secondary-colour);
  height: 10%;
}

.empty-basket-text {
  text-align: center;
  font-family: var(--secondary-font);
  font-size: 16px;
  font-weight: 400;
  font-style: italic;
}

.shopping-basket-items-container {
  display: flex;
  flex-direction: column;
  overflow-y: scroll;
  width: 100%;
  font-size: 24px;
  margin-top: 30px;
  height: 60%;
  padding: 0 10px;
}

.shopping-basket-item {
  display: flex;
  justify-content: space-around;
  margin-bottom: 30px;
}

.shopping-basket-item-name {
  width: 45%;
  line-height: 1em;
}

.shopping-basket-qty-container {
  display: flex;
  flex-direction: column;
  width: 30%;
  justify-content: center;
  align-items: center;
}

.shopping-basket-qty-btn {
  border: none;
  background-color: transparent;
  font-size: 24px;
  margin: 0 10px;
  height: 24px;
  color: var(--primary-colour);
}

.remove-item-btn {
  border: none;
  background-color: transparent;
  font-family: var(--secondary-font);
  font-size: 14px;
}

.item-subtotal {
  text-align: right;
  width: 25%;
}

.shopping-basket-total {
  width: 20%;
  font-size: 36px;
  display: flex;
  justify-content: space-between;
  width: 100%;
  padding: 0 20px;
}

.total-amount {
  color: var(--secondary-colour);
}

/* Hover effects for devices that support hover */
@media (hover: hover) {
  .shopping-basket-btn:hover {
    cursor: pointer;
  }

  .add-to-basket-btn:hover {
    cursor: pointer;
    background-color: var(--primary-colour);
  }

  .item-qty-btn:hover {
    cursor: pointer;
    background-color: var(--primary-colour);
  }

  .shopping-basket-qty-btn:hover {
    cursor: pointer;
    font-weight: bold;
    color: var(--secondary-colour);
  }

  .remove-item-btn:hover {
    cursor: pointer;
    color: var(--primary-colour);
    font-weight: bold;
  }
}

/* Large Screens */
@media (min-width: 668px) and (min-height: 500px) {
  .main-title {
    font-size: 8vh;
  }

  .shopping-basket-btn-container {
    right: 2rem;
  }

  .shopping-basket {
    --shopping-basket-width: 350px;
  }

  .item-container {
    --card-width: 280px;
    padding: 30px;
    display: grid;
    grid-template-columns: repeat(auto-fill, var(--card-width));
    gap: 30px;
    justify-content: center;
  }

  /* Workaround to add margin to the bottom of the grid */
  .item-container:after {
    content: "";
    height: 10px;
  }

  .item-card {
    height: 360px;
    width: var(--card-width);
    justify-content: flex-start;
    position: relative;
    margin: 0;
  }

  .item-info {
    flex-direction: column;
    align-items: center;
    justify-content: flex-end;
  }

  .item-photo {
    height: 150px;
    width: 200px;
  }

  .item-photo img {
    height: 150px;
  }

  .item-details {
    width: 100%;
    height: auto;
  }

  .item-description {
    margin: 15px 3px 0 3px;
    font-size: 18px;
  }

  .add-to-basket-btn {
    width: 150px;
    font-size: 20px;
    position: absolute;
    bottom: 10px;
  }

  .item-quantity-btns {
    width: 150px;
    position: absolute;
    bottom: 10px;
  }
}

/* Large screens in landscape */
@media (min-width: 668px) and (orientation: landscape) {
  .nav-bar {
    justify-content: center;
  }
}

/* Small Devices in landscape */
@media (max-height: 500px) and (orientation: landscape) {
  .nav-bar {
    height: 15%;
  }

  .main-title {
    font-size: 10vh;
  }

  .shopping-basket-btn-container {
    --shopping-basket-btn-size: 10vh;
  }

  .item-container {
    height: 85vh;
    margin-top: 15vh;
    --card-width: 300px;
    padding: 10px;
    display: grid;
    grid-template-columns: repeat(auto-fill, var(--card-width));
    gap: 10px;
    justify-content: center;
  }

  /* Workaround to add margin to the bottom of the grid */
  .item-container:after {
    content: "";
    height: 20px;
  }

  .item-card {
    width: var(--card-width);
    margin: 0;
  }

  .shopping-basket-background {
    height: 100%;
  }

  .shopping-basket {
    --shopping-basket-width: 50%;
    --shopping-basket-height: 85%;
  }

  .show-shopping-basket {
    --shopping-basket-offset: calc(((3 / 17) * 100) * 1%);
  }

  .shopping-basket h1 {
    font-size: 24px;
  }

  .shopping-basket-items-container {
    font-size: 18px;
  }

  .shopping-basket-total {
    font-size: 24px;
  }
}

